--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -460,7 +460,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![alt text](map.png \"Embarkation Ports\")"
+    "![alt text](images/map.png \"Embarkation Ports\")"
    ]
   },
   {
